--- a/index.css
+++ b/index.css
@@ -1,12 +1,42 @@
+* {
+  box-sizing: border-box;
+}
+
 body{
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: black;
-  
 }
 
-canvas{
-  background: #fff;
+.gameArea{
+  position: relative;
+}
+
+.healthArea{
+  position: absolute;
+  display: flex;
+  width: 100%;
+  align-items: center;
+  padding: 1rem;
+}
+
+#playerHealth{
+  background-color: chartreuse;
+  height: 2rem;
+  width: 100%;
+}
+
+#timer{
+  background-color: black;
+  width: 8rem;
+  height: 8rem;
+  flex-shrink: 0;
+}
+
+#enemyHealth{
+  background-color: aqua;
+  height: 2rem;
+  width: 100%;
 }
 
